 acts_as_audited ChangeLog
-------------------------------------------------------------------------------
* 2008-09-24 - Add ability to record parent record of the record being audited
               [Kenneth Kalmer]
* 2008-04-19 - refactored to make compatible with dirty tracking in edge rails
               and to stop storing both old and new values in a single audit
* 2008-04-18 - Fix NoMethodError when trying to access the :previous revision
               on a model that doesn't have previous revisions [Alex Soto]
* 2008-03-21 - added #changed_attributes to get access to the changes before a
               save [Chris Parker]
* 2007-12-16 - Added #revision_at for retrieving a revision from a specific
               time [Jacob Atzen]
* 2007-12-16 - Fix error when getting revision from audit with no changes
               [Geoffrey Wiseman]
* 2007-12-16 - Remove dependency on acts_as_list
* 2007-06-17 - Added support getting previous revisions
* 2006-11-17 - Replaced use of singleton User.current_user with cache sweeper
               implementation for auditing the user that made the change
* 2006-11-17 - added migration generator
* 2006-08-14 - incorporated changes from Michael Schuerig to write_attribute
               that saves the new value after every change and not just the
               first, and performs proper type-casting before doing comparisons
* 2006-08-14 - The "changes" are now saved as a serialized hash
* 2006-07-21 - initial version